Trying to play with VirtualThreads